--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
             <div class="functionBox">
                 <button id="clearCanvas"><img src="./images/回收站.png" alt="">清空画布</button>
                 <button id="downloadCanvas"><img src="./images/下载.png" alt="">下载</button>
+                <button id="setCanvasGirdDisplay"><img src="./images/icon_grid.png" alt="">格子图</button>
+                <button id="setNoteBookLine"><img src="./images/笔记，记录.png">笔记线</button>
             </div>
         </div>
         <div class="canvas">
